Changed check-style job

--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -41,6 +41,8 @@ jobs:
         uses: nikitasavinov/checkstyle-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          reporter: 'github-pr-check'
+          filter_mode: file
 
       - name: Fail on lint errors (optional)
         run: exit 1
