--- a/.github/workflows/push-confirm-build.yml
+++ b/.github/workflows/push-confirm-build.yml
@@ -31,14 +31,15 @@ jobs:
 
   check-style:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Run Checkstyle
         uses: nikitasavinov/checkstyle-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          filter_mode: file
 
       - name: Fail on lint errors (optional)
         run: exit 1
