More checkstyle changes

--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -42,7 +42,9 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: 'github-pr-check'
-          filter_mode: file
+          filter_mode: nofilter
+          checkstyle_config: 'checkstyle.xml'
+          properties_file: 'reviewdog.yml'
 
       - name: Fail on lint errors (optional)
         run: exit 1
