--- a/.github/workflows/push-confirm.yml
+++ b/.github/workflows/push-confirm.yml
@@ -39,7 +39,9 @@ jobs:
         uses: nikitasavinov/checkstyle-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          filter_mode: file
+          filter_mode: nofilter
+          checkstyle_config: 'checkstyle.xml'
+          properties_file: 'reviewdog.yml'
 
       - name: Fail on lint errors (optional)
         run: exit 1
