--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -63,13 +63,27 @@ jobs:
           name: build
           path: staging
   
-  create-release:
-    permissions: write-all
+  YAML
+jobs:
+  create_release:
     runs-on: ubuntu-latest
-    needs: create-jar
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Check for Existing Release (Optional)
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const existingRelease = await github.repos.getReleaseByTag({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag: 'v${{ secrets.VERSION }}'
+            });
+
+            if (existingRelease) {
+              core.setFailed('Release already exists for tag v${{ secrets.VERSION }}');
+            }
 
       - name: Create tag
         uses: actions/github-script@v7
@@ -81,7 +95,7 @@ jobs:
               ref: 'refs/tags/v${{ secrets.VERSION }}',
               sha: context.sha
             })
-        
+
       - name: Add files to Tag
         uses: softprops/action-gh-release@v2
         with:
@@ -90,8 +104,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create Release
+      - name: Create Release (Only if release doesn't exist)
         id: create_release
+        if: steps.check_release.outputs == undefined
         uses: actions/create-release@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -102,6 +117,17 @@ jobs:
             Release v${{ secrets.VERSION }}
           draft: false
           prerelease: false
+
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./staging/*.jar
+          asset_name: ${{ files.upload-release-asset.outputs.name }
+          asset_content_type: application/java-archive
 
   write-comment-on-unit-test-failure:
     permissions: write-all
