--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -104,7 +104,7 @@ jobs:
 
       - name: Create Release (Only if release doesn't exist)
         id: create_release
-        if: steps.check_release.outputs == undefined
+        if: steps.check_release.outputs != ''
         uses: actions/create-release@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
