--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -69,6 +69,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install dependencies
+        run: |
+          npm install @octokit/rest
+
       - name: Check for Existing Release (Optional)
         uses: actions/github-script@v7
         with:
