--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -77,7 +77,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const octokit = require('@octokit/rest');
+            const octokit = require('@octokit/rest').then(factory => factory())
             const owner = context.repo.owner;
             const repo = context.repo.repo;
             const tag_name = `v${{ secrets.VERSION }}`;
