--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -77,12 +77,14 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const octokit = require('@octokit/rest').then(factory => factory())
+            const octokit = require('@octokit/rest');
             const owner = context.repo.owner;
             const repo = context.repo.repo;
             const tag_name = `v${{ secrets.VERSION }}`;
 
-            const octo = new octokit({ auth: process.env.GITHUB_TOKEN });
+            const octo = new Octokit({
+              auth: process.env.GITHUB_TOKEN
+            });
 
             try {
               const release = await octo.repos.getReleaseByTag({
