--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -77,9 +77,9 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const { context, GitHub } = require('@actions/github');
-            const owner = context.repo.owner;
-            const repo = context.repo.repo;
+            const { context: githubContext, GitHub } = require('@actions/github');
+            const owner = githubContext.repo.owner;
+            const repo = githubContext.repo.repo;
             const tag_name = `v${{ secrets.VERSION }}`;
 
             const octo = new GitHub(process.env.GITHUB_TOKEN);
