--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -77,6 +77,8 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            import { Octokit, App } from "octokit";
+
             const owner = context.repo.owner;
             const repo = context.repo.repo;
             const tag_name = `v${{ secrets.VERSION }}`;
