--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -77,7 +77,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            import { Octokit, App } from "octokit";
+            var Octokit = require('@octokit/rest');
 
             const owner = context.repo.owner;
             const repo = context.repo.repo;
