--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -71,13 +71,13 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install @octokit/rest
+          npm install @octokit/core
 
       - name: Check for Existing Release (Optional)
         uses: actions/github-script@v7
         with:
           script: |
-            var Octokit = require('@octokit/rest');
+            var Octokit = require('@octokit/core');
 
             const owner = context.repo.owner;
             const repo = context.repo.repo;
