--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -69,44 +69,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install dependencies
-        run: |
-          npm install @octokit/core
-
-      - name: Check for Existing Release (Optional)
-        uses: actions/github-script@v7
-        with:
-          script: |
-            var Octokit = require('@octokit/core');
-
-            const owner = context.repo.owner;
-            const repo = context.repo.repo;
-            const tag_name = `v${{ secrets.VERSION }}`;
-
-            const octo = new Octokit({
-              auth: process.env.GITHUB_TOKEN
-            });
-
-            async function run() {
-              try {
-                const release = await octo.repos.getReleaseByTag({
-                  owner,
-                  repo,
-                  tag: tag_name
-                });
-                if (release.data) {
-                  console.log(`Release already exists for tag ${tag_name}`);
-                  core.setOutput('release_exists', true);
-                } else {
-                  core.setOutput('release_exists', false);
-                }
-              } catch (error) {
-                console.log(`No release found for tag ${tag_name}`);
-                core.setOutput('release_exists', false);
-              }
-            }
-            run();
-
       - name: Create tag
         uses: actions/github-script@v7
         with:
@@ -126,9 +88,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create Release (Only if release doesn't exist)
+      - name: Create Release
         id: create_release
-        if: steps.check_release.outputs.release_exists == 'false'
         uses: actions/create-release@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
