--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -65,6 +65,7 @@ jobs:
   
   create_release:
     runs-on: ubuntu-latest
+    needs: create-jar
     permissions: write-all
     steps:
       - name: Checkout code
@@ -90,7 +91,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./staging/*.jar
+          asset_path: staging/*.jar
           asset_name: JabberPoint-${{ secrets.VERSION }}.jar
           asset_content_type: application/java-archive
 
