--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -86,8 +86,10 @@ jobs:
         
       - name: Log
         run: |
-          cd target
-          ls -al
+          ls -al ~/
+          ls -al ./
+          ls -al ./target
+          ls -al ./staging
 
       - name: Upload Release Asset
         id: upload-release-asset 
