--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -65,7 +65,6 @@ jobs:
   
   create_release:
     runs-on: ubuntu-latest
-    needs: create-jar
     permissions: write-all
     steps:
       - name: Checkout code
@@ -83,13 +82,22 @@ jobs:
             Release v${{ secrets.VERSION }}
           draft: false
           prerelease: false
-        
-      - name: Log
-        run: |
-          ls -al ~/
-          ls -al ./
-          ls -al ./target
-          ls -al ./staging
+      
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: 21
+          distribution: 'oracle'
+
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
+      - name: Build Jar
+        run: mvn package
 
       - name: Upload Release Asset
         id: upload-release-asset 
@@ -98,7 +106,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: staging/*.jar
+          asset_path: ./target/*.jar
           asset_name: JabberPoint-${{ secrets.VERSION }}.jar
           asset_content_type: application/java-archive
 
