--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -99,6 +99,9 @@ jobs:
       - name: Build Jar
         run: mvn package
 
+      - name: Log
+        run: ls -l target
+
       - name: Upload Release Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
