--- a/.github/workflows/pull-request-check-release.yml
+++ b/.github/workflows/pull-request-check-release.yml
@@ -97,7 +97,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
       - name: Build Jar
-        run: mvn package
+        run: mvn package | cp target/*.jar ./JabberPoint-${{ secrets.VERSION }}.jar
 
       - name: Upload Release Asset
         id: upload-release-asset 
@@ -106,7 +106,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: /home/runner/work/JabberPoint/JabberPoint/target/JabberPoint-***.jar
+          asset_path: ./*.jar
           asset_name: JabberPoint-${{ secrets.VERSION }}.jar
           asset_content_type: application/java-archive
 
